Delegate live ignition file check

--- a/include/coreos_build_iso.yaml
+++ b/include/coreos_build_iso.yaml
@@ -25,6 +25,7 @@
   stat:
     path: "{{files_dir}}/combined-ignition.ign"
   register: live_ignition_file
+  delegate_to: localhost
 
 - name: Build customized ISO (4.10+)
   shell: |
