--- a/include/gather_ilo_facts.yaml
+++ b/include/gather_ilo_facts.yaml
@@ -9,6 +9,10 @@
   retries: 5
   delay: 10
 
+- name: Save ILO UUID
+  set_fact:
+    hpe_product_uuid: "{{ ilo_info.hw_product_uuid }}"
+
 - name: Save ILO serial (padded)
   set_fact:
     serial: "{{'%-16s'|format(ilo_info.hw_system_serial)}}"
